# daisy

./: CMakeLists.txt  README.md
config/: SSD.json
include/: AttributeTagTable.h  BatchStream.h  MemoryCounter.h  anyconversion.h  common.h  config.h  data_type.h
scripts/: PrepareINT8CalibrationBatches.sh  batchPrepare.py  jpg2ppm.py  ppm2jpg.py
src/: AttributeTagTable.cpp  CMakeLists.txt  anyconversion.cpp  config.cpp
test/: CMakeLists.txt  main.cpp
